Add test case for setup wizard